--- a/GUI_Module/Properties/Resources.resx
+++ b/GUI_Module/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="rms-logo-220" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rms-logo-220.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="personIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\personIcon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
