--- a/GUI_Module/Properties/Resources.resx
+++ b/GUI_Module/Properties/Resources.resx
@@ -118,10 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="rms-logo-220" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\rms-logo-220.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="openSign" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\openSign1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="personIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\personIcon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rms-logo-220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rms-logo-220.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="openSignT" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\openSignT.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
